Wheel scss image fix

--- a/src/assets/scss/views/wheel.scss
+++ b/src/assets/scss/views/wheel.scss
@@ -7,7 +7,7 @@
 
 .wheel-page {
   @include indent(5em 0);
-  background: #15191f url("../images/bg/wheel.png") top/cover;
+  background: #15191f url("../../images/bg/wheel.png") top/cover;
   overflow: hidden;
 }
 
