Add animation to case image

--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -6,3 +6,6 @@
 
 $weaponSize: 17em;
 $weaponPadding: 1.5em;
+
+$case-width: var(--case-width, 20em);
+$case-image-height: var(--case-image-height, 20em);
